--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,18 @@
-body {
-    background-color: #7d5151;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
+body,html {
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+    overflow:hidden;
 }
-body > * {
-    box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background: rgb(120, 120, 120);
+#fps{
+    position:absolute;
+    top:0;
+    left:0;
+    color:#fff;
+    padding:5px;
+    background:#000;
+    border-radius:5px;
+    margin:5px;
+    font-size:large;
 }
