--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="number"].no-spinners {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-  appearance: textfield;
-}
-input[type="number"].no-spinners::-webkit-inner-spin-button,
-input[type="number"].no-spinners::-webkit-outer-spin-button {
-  -webkit-appearance: none;
+@layer {
+  input[type="number"].no-spinners {
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
+  }
+
+  input[type="number"].no-spinners::-webkit-inner-spin-button,
+  input[type="number"].no-spinners::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+  }
+  body {
+    @apply overflow-hidden w-screen h-screen;
+  }
 }
